--- a/pi_calculation_api/.env_template
+++ b/pi_calculation_api/.env_template
@@ -1,1 +1,3 @@
 SECRET=<value_django_secret>
+CACHE_NAME=<name_of_the_redis_service>
+GATEWAY_IP=<the_gateway_ip_of_the_newly_created_docker_network>
