Adding the third iteration of the project.
Changes:

- Merged the two .env files into a single one inside the root directory.
- Created the README.md.
- Modified the .gitignore

--- a/.env_template
+++ b/.env_template
@@ -1,2 +1,5 @@
 CELERY_BROKER_URL=<redis_broker_db_url_0>
 CELERY_RESULT_BACKEND=<redis_result_backend_url_1>
+SECRET=<secret_value>
+CACHE=<redis_cache_db_2>
+GATEWAY_IP=<IP>
